[B]2.2.2[/B]
• Add possibility to greyed out watched items in library and on widgets
• Add support for Videolyrics v3 with possibility to fix lyrics colors by song (thanks to manfeed)
• Add support for Kodi Log Uploader addon
• Minor fixes

[B]2.2.1[/B]
• Changes for Kodi 18
• Add 'All channels' and 'All radios' widgets
• Fix PVR channels OSD
• Fix esthetic appearance

[B]2.2.0[/B]
• Add possibility to force views in library
• Add possibility to customize power menu
• Add flags for moviesets widget
• Fix missing view for music
• Fix esthetic appearance
• Fix context menu position
• Minor fixes

[B]2.1.9[/B]
• Changes for Kodi 18
• Add preview for view mode
• Minor fixes

[B]2.1.8[/B]
• Add new 'Mosaic (vertical)' view

[B]2.1.7[/B]
• Changes for Kodi 18
• Fix setting to disable submenu
• Minor fixes

[B]2.1.6[/B]
• Add new 'Gallery' view
• Add new 'Mosaic' view
• Add clearlogos list for 'Shift' view
• Minor fixes

[B]2.1.5[/B]
• Add library info on settings widget
• Add ratings/user ratings in list views
• Changes on 'Next episode to watch' widget
• Minor fixes

[B]2.1.4[/B]
• Add possibility to configure submenus for Personnal Widget
• Add possibility to show banners for episodes/thumbs widgets
• Decrease number of personal widgets to 8 because not possible to show more
• Fix context menu for CU LRC Lyrics addon
• Fix disable Clearlogos on library
• Minor fixes

[B]2.1.3[/B]
• Fix centered posters on some views
• Fix missing posters flag for moviesets with Wall (Thumbnails) view
• Minor fixes

[B]2.1.2[/B]
• Fix adding item with Skin Shortcut

[B]2.1.1[/B]
• Add support for submenus with Skin Shortcuts addon
• Minnor fixes

[B]2.1.0[/B]
• Add support for Skin Shortcuts addon to customize home menu and widgets
• Add support for thumbnails with NextUp Service addon
• Add support for Videolyrics v2 (thanks to manfeed)
• Minnor fixes
• Special Thanks to Gracus and ferent for reporting issue

[B]2.0.6[/B]
• Add two views for power menu