@@ -2,6 +2,7 @@
 • Add possibility to greyed out watched items in library and on widgets
 • Add support for Videolyrics v3 with possibility to fix lyrics colors by song (thanks to manfeed)
 • Add support for Kodi Log Uploader addon
+• Fix LibreELEC settings buttons
 • Minor fixes
 
 [B]2.2.1[/B]
